* Remove registerSelector()/registerOperator() API and expose NW.Dom.Selectors/NW.Dom.Operators allowing developers to overwrite the default selectors with custom ones. [jddalton]

* Ensure select()/match() return an empty array/false for unsupported/invalid selectors. [jddalton]

* Make the definition of `RE_SIMPLE_SELECTOR` more granular, tweak private byName() usage for IE, and simplify the public byClass(), byName(), and byTag(). [jddalton]

* Ensure compileSelector() handles tag selectors as case-insensitive for non-html elements. [jddalton]

* Make non-html elements in byClass() and byName() use client_api() instead of select() and avoid an infinite loop in the `NAME optimization RTL` section of client_api(). [jddalton]

* Add `NAME optimization RTL` to client_api(). [jddalton]

* Change `notHTML` from `!('body' in doc)` to `!('body' in doc) || !('innerHTML' in root)` to correct the feature test for WebKit. [jddalton]

* Make compileSelector() use getAttribute() for ID selectors on non-html elements. [Diego Perini, jddalton]

* Fix Opera 9.25 bug by ensuring compileSelector() checks `e.nodeType==1` before attempting (get/has)Attribute and tweak `reUnnormalized` and `reValidator` regexps. [jddalton]

* Rewrite byName(), fix `NATIVE_GEBN` check and add feature tests for `BUGGY_GEBN_MATCH_ID`, `BUGGY_GEBN_WITH_ID_LENGTH`, and `BUGGY_GEBN_WITH_NON_INPUT`. [jddalton]

* Fix regression in `strSkipGroups` that stopped NWMatcher running in Chrome. [jddalton]

* Remove `cn.length` check in byClass() because non-html elements are handled elsewhere and rename `cn` to `n` for better compression with other `n` variables. [jddalton]

* Perform `e.type` before the `"form" in e` check to resolve `:enabled` and `:disabled` dynamic pseudos faster. [Diego Perini]

* Refactor attribute resolver in compileSelector() to avoid unneeded String#replace calls and other operations. [Diego Perini, jddalton]
